# pcupback

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  justfile  refresh_db.sh
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 20250225013734_Initial.sql  20250225110510_Sessions.sql  20250301090842_Sync.sql  20250320140852_Sync_test.sql
src/: db.rs  lib.rs  main.rs  schema_test.rs  tests.rs  util.rs
src/auth/: mod.rs
src/auth/data/: private.rs  public.rs
src/auth/structs/: db.rs  http.rs  mod.rs
src/routes/: mod.rs  sql.rs
src/routes/auth/: mod.rs  tests.rs
src/routes/auth/data/: mod.rs  private.rs  public.rs
src/routes/delete_account/: mod.rs  tests.rs
src/routes/reset_session/: mod.rs  tests.rs
src/routes/sync/: mod.rs  tests.rs
src/routes/sync/data/: mod.rs  private.rs  public.rs
src/routes/validate_session/: mod.rs  tests.rs
src/schema_test/: app_info.rs  mod.rs  sessions.rs  users.rs
src/util/: auth.rs  db.rs
