[package]
name = "pcupback"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["password-hash"] }
chrono = "0.4"
rocket = { version = "0.5", features = ["json"] }
serde = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0"
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
uuid = { version = "1.15", features = ["v4"] }

[profile.release]
lto = "fat"
codegen-units = 1
