[package]
name = "pcupback"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["password-hash"] }
chrono = "0.4"
console-subscriber = "0.4.1"
rocket = { version = "0.5", features = ["json"] }
serde = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2"
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = "0.3"
uuid = { version = "1.15", features = ["v4"] }

[features]
# enable tokio console debugging.
tokio-console = []

[profile.release]
# FIXME: uncomment these when building final binary.
# lto = "fat"
# codegen-units = 1
