[package]
name = "pcupback"
version = "0.1.1"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["password-hash"] }
chrono = "0.4"
console-subscriber = "0.4.1"
rocket = { version = "0.5", features = ["json"] }
serde = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
macros = { path = "macros" }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
# enable tokio console debugging.
tokio-console = []

[profile.release]
lto = "fat"
codegen-units = 1
